--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "owl",
-  "license": "MIT",
-  "version": "0.1.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build --mode client && vite build",
-    "preview": "wrangler dev",
-    "deploy": "npm run build && wrangler deploy"
-  },
-  "engines": {
-    "node": ">=22",
-    "pnpm": ">=10",
-    "npm": "please use pnpm",
-    "yarn": "please use pnpm"
-  },
-  "dependencies": {
-    "hono": "^4.7.4",
-    "honox": "^0.1.38"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@cloudflare/workers-types": "^4.20250303.0",
-    "@hono/vite-build": "^1.3.0",
-    "@hono/vite-dev-server": "^0.18.3",
-    "@playwright/test": "^1.51.0",
-    "@types/node": "^22.13.10",
-    "happy-dom": "^17.4.2",
-    "vite": "^6.2.1",
-    "vitest": "^3.0.8",
-    "wrangler": "^3.114.0"
-  }
+	"name": "owl",
+	"license": "MIT",
+	"version": "0.1.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"biome": "biome lint --write && biome format --write",
+		"test": "vitest run",
+		"e2e": "playwright test",
+		"build": "vite build --mode client && vite build",
+		"preview": "wrangler dev",
+		"deploy": "pnpm build && wrangler deploy"
+	},
+	"engines": {
+		"node": ">=22",
+		"pnpm": ">=10",
+		"npm": "please use pnpm",
+		"yarn": "please use pnpm"
+	},
+	"dependencies": {
+		"hono": "^4.7.4",
+		"honox": "^0.1.38"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@cloudflare/workers-types": "^4.20250303.0",
+		"@hono/vite-build": "^1.3.0",
+		"@hono/vite-dev-server": "^0.18.3",
+		"@playwright/test": "^1.51.0",
+		"@types/node": "^22.13.10",
+		"happy-dom": "^17.4.2",
+		"vite": "^6.2.1",
+		"vitest": "^3.0.8",
+		"wrangler": "^3.114.0"
+	}
 }
