Refactor code for consistency and readability, including formatting adjustments and import statement updates

--- a/biome.json
+++ b/biome.json
@@ -10,6 +10,12 @@
 			"**/*.jsx",
 			"**/*.tsx"
 		],
-		"ignore": ["node_modules/**", "dist/**", "types/**"]
+		"ignore": [
+			".vscode/**",
+			".pnpm-store/**",
+			"node_modules/**",
+			"dist/**",
+			"types/**"
+		]
 	}
 }
