--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"@types/node": "^22.13.10",
 		"happy-dom": "^17.4.2",
 		"vite": "^6.2.1",
-		"vitest": "^3.0.8",
-		"wrangler": "^3.114.0"
+		"vitest": "^3.0.8"
 	}
 }
